Update serviceAccount.yaml，add configmap function

--- a/serviceAccount.yaml
+++ b/serviceAccount.yaml
@@ -11,8 +11,8 @@ metadata:
   namespace: smart-agent
 rules:
 - apiGroups: [""]
-  resources: ["pods"]
-  verbs: ["get", "list"]
+  resources: ["pods", "configmaps"]
+  verbs: ["get", "list", "create", "update", "delete"]
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
